Featured card alignment bugfix

--- a/caesars-palace/blocks/tabs/tabs.css
+++ b/caesars-palace/blocks/tabs/tabs.css
@@ -1,5 +1,5 @@
 .tabs.block {
-  margin-top: 98px;
+  margin-top: 24px;
 }
 
 .tabs.block .tab-navbar {
